--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_useremail" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/btn_registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
