--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.view.LoginActivity">
+    tools:context=".ui.login.view.LoginActivity"
+    android:background="@color/teal_700">
 
     <EditText
         android:id="@+id/et_email"
@@ -13,7 +14,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="16dp"
-        android:autofillHints=""
         android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
@@ -26,7 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:autofillHints=""
         android:hint="@string/password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
