--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.view.HomeActivity">
+    tools:context=".ui.home.view.HomeActivity"
+    android:background="@color/purple_700"
+    >
 
     <TextView
         android:id="@+id/tv_wellcome"
