--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,12 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.view.HomeActivity"
-    android:background="@color/purple_700"
-    >
+    tools:context=".ui.home.view.HomeActivity">
 
     <TextView
-        android:id="@+id/tv_wellcome"
+        android:id="@+id/tv_welcome"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/login_success"
@@ -30,7 +28,7 @@
         app:layout_constraintBottom_toTopOf="@id/tv_emailUser"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_wellcome" />
+        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />
 
     <TextView
         android:id="@+id/tv_emailUser"
