--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.register.view.RegisterActivity"
-    android:background="@color/black">
+    tools:context=".ui.register.view.RegisterActivity">
 
     <EditText
         android:id="@+id/et_username"
