--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -54,14 +54,29 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/btn_ex66"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="16dp"
         android:backgroundTint="@color/black"
-        android:textColor="@color/white"
-        android:text="Mensagens"
+        android:text="Exercício 66"
         android:textAllCaps="true"
-        app:layout_constraintTop_toBottomOf="@id/image"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toStartOf="@id/btn_ex67"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/image" />
+
+    <Button
+        android:id="@+id/btn_ex67"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/black"
+        android:text="Exercício 67"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btn_ex66"
+        app:layout_constraintTop_toBottomOf="@id/image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
